Hero banner zoom overlap fix

--- a/blocks/herobanner/herobanner.css
+++ b/blocks/herobanner/herobanner.css
@@ -487,4 +487,7 @@
   .hero-banner-container {
     padding-top: 140px;
   }
+  .hero-title {
+    line-height: 58px;
+  }
 }
